# cmake_practise

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt
include/: SortIntegers.h
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/sortIntegers/: CMakeLists.txt  Makefile  SortIntegers.cpp  cmake_install.cmake
tools/: CMakeLists.txt  Makefile  cmake_install.cmake
tools/cursesexample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
tools/fibSorter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fibSorter  main.cpp
